{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 106,
  "lineage": "123bf582-b718-03f8-c552-b2abb17da646",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07303936884529ea3",
            "domain": "vpc",
            "id": "eipalloc-07303936884529ea3",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-19-93-129.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.93.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Lab2-eip"
            },
            "tags_all": {
              "Name": "Lab2-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-priv-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07170aa5b08fe4af5",
            "arn": "arn:aws:ec2:us-east-2:277380724398:instance/i-0b3a6174668e6140a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3a6174668e6140a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0968a251915844219",
            "private_dns": "ip-10-0-1-29.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03444e6e3b3d02468",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0893d67fa59b99bd2",
            "tags": {
              "Name": "Lab2-priv-ec2"
            },
            "tags_all": {
              "Name": "Lab2-priv-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087cc1e9f5261334a"
            ]
          },
          "dependencies": [
            "aws_security_group.private-ec2-sg",
            "aws_subnet.main_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-pub-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07170aa5b08fe4af5",
            "arn": "arn:aws:ec2:us-east-2:277380724398:instance/i-00950461dd11bdbc2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00950461dd11bdbc2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f98e6ccad0e88969",
            "private_dns": "ip-10-0-0-86.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.86",
            "public_ip": "3.14.80.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f38c297b10764ea0",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0475035752c0199f4",
            "tags": {
              "Name": "Lab2-pub-ec2"
            },
            "tags_all": {
              "Name": "Lab2-pub-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e99f5281cb4dd3f7"
            ]
          },
          "dependencies": [
            "aws_security_group.pub-ec2-sg",
            "aws_subnet.main_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mygw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277380724398:internet-gateway/igw-07faca45ec93441b7",
            "id": "igw-07faca45ec93441b7",
            "owner_id": "277380724398",
            "tags": {
              "Name": "lab2-IGW"
            },
            "tags_all": {
              "Name": "lab2-IGW"
            },
            "vpc_id": "vpc-00c5396b29b432cc5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07303936884529ea3",
            "connectivity_type": "public",
            "id": "nat-03f7bd146134a0025",
            "network_interface_id": "eni-0b500863b259952d4",
            "private_ip": "10.0.0.48",
            "public_ip": "3.19.93.129",
            "subnet_id": "subnet-0475035752c0199f4",
            "tags": {
              "Name": "Lab2-nat-gw"
            },
            "tags_all": {
              "Name": "Lab2-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_subnet.main_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a3e83c03b375fae91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03f7bd146134a0025",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3e83c03b375fae9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_nat_gateway.mynat",
            "aws_route_table.private_routT",
            "aws_subnet.main_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07faca45ec93441b7",
            "id": "r-rtb-0201aa0306bc5983e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0201aa0306bc5983e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_route_table.puplic_routeT",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277380724398:route-table/rtb-0a3e83c03b375fae9",
            "id": "rtb-0a3e83c03b375fae9",
            "owner_id": "277380724398",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab2-private_routet"
            },
            "tags_all": {
              "Name": "lab2-private_routet"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c5396b29b432cc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "puplic_routeT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277380724398:route-table/rtb-0201aa0306bc5983e",
            "id": "rtb-0201aa0306bc5983e",
            "owner_id": "277380724398",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab2-puplic_routet"
            },
            "tags_all": {
              "Name": "lab2-puplic_routet"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c5396b29b432cc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021ea5c0580ae7791",
            "route_table_id": "rtb-0a3e83c03b375fae9",
            "subnet_id": "subnet-0893d67fa59b99bd2"
          },
          "dependencies": [
            "aws_route_table.private_routT",
            "aws_subnet.main_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7fa54130a17da4b",
            "route_table_id": "rtb-0201aa0306bc5983e",
            "subnet_id": "subnet-0475035752c0199f4"
          },
          "dependencies": [
            "aws_route_table.puplic_routeT",
            "aws_subnet.main_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277380724398:security-group/sg-087cc1e9f5261334a",
            "description": "Allow inbound ssh from any IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087cc1e9f5261334a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "277380724398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH Only"
            },
            "tags_all": {
              "Name": "Allow SSH Only"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c5396b29b432cc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277380724398:security-group/sg-0e99f5281cb4dd3f7",
            "description": "Allow inbound http and ssh from any IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e99f5281cb4dd3f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "277380724398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH and HTTP"
            },
            "tags_all": {
              "Name": "Allow SSH and HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c5396b29b432cc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277380724398:subnet/subnet-0475035752c0199f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0475035752c0199f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277380724398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab2-Pub-Subnet"
            },
            "tags_all": {
              "Name": "Lab2-Pub-Subnet"
            },
            "vpc_id": "vpc-00c5396b29b432cc5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277380724398:subnet/subnet-0893d67fa59b99bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0893d67fa59b99bd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277380724398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab2-priv-Subnet"
            },
            "tags_all": {
              "Name": "Lab2-priv-Subnet"
            },
            "vpc_id": "vpc-00c5396b29b432cc5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277380724398:vpc/vpc-00c5396b29b432cc5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ed7f2413f45a062",
            "default_route_table_id": "rtb-07c751b3c27147b50",
            "default_security_group_id": "sg-0f1ee467ef14b7dec",
            "dhcp_options_id": "dopt-0e21e30bbd234c7d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c5396b29b432cc5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c751b3c27147b50",
            "owner_id": "277380724398",
            "tags": {
              "Name": "Lab2-vpc"
            },
            "tags_all": {
              "Name": "Lab2-vpc"
            }
          }
        }
      ]
    }
  ]
}